# godot-kotlin-jvm-experiment

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Node2D.gd  Node2D.tscn  README.md  library.cpp  library.h  project.godot  settings.gradle.kts  testInterop.gdnlib
benchmarks/: benchmarks.gdnlib  settings.gradle.kts
benchmarks/scripts/: Main.gd
benchmarks/src/gdns/kotlin/: Simple.gdns
benchmarks/src/main/kotlin/godot/: Entry.kt
benchmarks/src/main/kotlin/godot/benchmark/: Simple.kt
gd/: Simple.gd
gdnative/: Cargo.toml  build.rs
godot-glue/: build.gradle.kts
godot-glue/src/nativeInterop/cinterop/: jni.def
godot-glue/src/nativeMain/kotlin/godot/entry/: Entry.kt
godot-glue/src/nativeMain/kotlin/godot/internal/: GDString.kt  Glue.kt  Godot.kt  Jvm.kt  Utils.kt  Wrapper.kt
godot-library/: build.gradle.kts
godot-library/src/commonMain/kotlin/godot/: GodotEntry.kt
godot-library/src/commonMain/kotlin/godot/core/: AABB.kt  Basis.kt  Color.kt  Plane.kt  Quat.kt  Rect2.kt  Transform.kt  Transform2D.kt  Vector2.kt  Vector3.kt
godot-library/src/commonMain/kotlin/godot/internal/: BindingContext.kt  CoreType.kt  KObject.kt  KVariant.kt  NativeCoreType.kt  TypeManager.kt  Utils.kt  (+1 more)
godot-loader/: build.gradle.kts
godot-loader2/: CMakeLists.txt
godot-loader2/jni_wrapper/: CMakeLists.txt
godot-loader2/jni_wrapper/src/: env.cpp  jvm.cpp  types.cpp
godot-loader2/jni_wrapper/src/include/: env.h  exceptions.h  jvm.h  types.h
godot-loader2/src/: bridge.cpp  bridge.h  entry.cpp  godot.cpp  godot.h  icall_args.cpp  icall_args.h  jni_utils.cpp  jni_utils.h  layouts.h  method_bind_cache.cpp  method_bind_cache.h  native_binding_context.cpp  native_binding_context.h  native_class_handle.cpp  native_class_handle.h  native_kfunction.cpp  native_kfunction.h  native_kobject.cpp  native_kobject.h  native_kvariant.cpp  native_kvariant.h  native_transfer_context.cpp  native_transfer_context.h  native_tvalue.cpp  native_tvalue.h
harness/simple/: .gitignore  Spatial.gdns  libgodot_glue.dylib  libgodot_loader.dylib  project.godot  root.gd  settings.gradle.kts  simple.gd  simple.gdnlib  simple.gdns  simple.tscn
harness/tests/: build.gradle.kts  godot_loader.gdnlib  project.godot
harness/tests/test/: tests.tscn
harness/tests/test/unit/: test_invocation.gd
java/: .gitignore  build.gradle.kts  godot_registration_ClassHandle.h
jni-kt/: build.gradle.kts
jni-kt/src/linuxMain/kotlin/jni/: JvmLoader.kt
jni-kt/src/macosMain/kotlin/jni/: JvmLoader.kt
jni-kt/src/nativeMain/kotlin/jni/: JNIEnv.kt  JNIVersion.kt  JValue.kt  JavaVM.kt  JavaVMInitArgs.kt  JvmLoader.kt  Types.kt  Utils.kt
jni-kt2/: build.gradle.kts
jni-kt2/src/macosMain/kotlin/jni/: JvmLoader.kt
jni-kt2/src/nativeInterop/cinterop/: jni.def
jni-kt2/src/nativeMain/kotlin/jni/: Exceptions.kt  JClass.kt  JObject.kt  JValues.kt  JavaVm.kt  JavaVmInitArgs.kt  JniEnv.kt  JniVersion.kt  NativeMethod.kt  Types.kt  Utils.kt
jni-kt2/src/windowsMain/kotlin/jni/: JvmLoader.kt
kt/: Simple.gdns
protos/: wire.proto
scripts/: Benchmark.gd  Benchmarks.gd  Main.gd  MovingAverage.gd  Stats.gd
src/: Bridge.cpp  Bridge.h  Godot.cpp  Godot.h  godot.rs  lib.rs
src/jni/: JniHelper.cpp  JniHelper.h
src/jvm/: Jvm.cpp  Jvm.h
src/registration/: ClassHandle.h
(+51 files in other folders)
